--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {"DefaultConnection": "Data source=store.db"}
+  "ConnectionStrings": {"DefaultConnection": "Data source=store.db"},
+  "JWTSettings": {
+    "TokenKey": "this is a secret key and needs to be at least 12 characters"
+  }
 }
